# OpenGLTest

./: CMakeLists.txt  README.md  main.cpp
Models/: spiral_staircase_.mtl
Shaders/: OmniShadowmap.frag  OmniShadowmap.geom  OmniShadowmap.vert  dirShadowmap.vert  shader.frag  shader.vert  skyBox.frag  skyBox.vert
Src/: Camera.hpp  Constants.h  DirectionalLight.hpp  Light.hpp  Material.hpp  Mesh.hpp  Model.hpp  OmniShadowMap.hpp  PointLight.hpp  Shader.hpp  ShadowMap.hpp  SkyBox.hpp  SpotLight.hpp  Texture.cpp  Texture.h  Texture.hpp  Window.hpp
Textures/Skybox/: depression-pass_up.tga  sandstorm_dn.tga  sandstorm_up.tga
